--- a/index.css
+++ b/index.css
@@ -96,12 +96,12 @@ select {
     font-weight: 300;
 }
 
-/* select i {
+select i {
     width: 2.8rem;
     margin-right: -0.8rem;
     margin-left: -0.9rem;
     color: rgb(51, 14, 15);
-} */
+}
 
 
 @media (max-width:1123px) {
@@ -127,21 +127,24 @@ select {
 }
 
 @media (max-width:800px) {
-    textarea,.row{
-        width:93vw;
+
+    textarea,
+    .row {
+        width: 93vw;
     }
 
     html {
         font-size: 90%;
     }
 
-    select,button{
+    select,
+    button {
         height: 3rem;
     }
 
     select {
-     
-      
+
+
         background-position-x: calc(100% - 0.2rem);
         background-position-y: 0.6rem;
         font-size: 1.1rem;
