--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
 .hero h1 {
     font-size: 3rem;
     font-weight: 500;
-    margin-top: -2rem;
+    margin-top: -4rem;
     color: #fff;
     margin-bottom: 2rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -103,7 +103,7 @@ button i {
     color: #fff;
     margin: 0 auto;
     letter-spacing: 0.2rem;
-   padding-top: 0.8rem;
+    padding-top: 0.8rem;
 }
 
 select {
@@ -226,6 +226,11 @@ select i {
         font-size: 70%;
     }
 
+    #foot {
+        position: absolute;
+        bottom: 0;
+    }
+
     #foot h2 {
         font-size: 90%;
         margin: 10rem auto;
@@ -233,13 +238,13 @@ select i {
 
     .hero {
         width: 100%;
-        height: 98.9vh;
+        height: 97vh;
     }
 
-    #foot {
-        position: absolute;
-        bottom: 0;
+    .hero h1{
+        margin-top: -14rem;
     }
+
 }
 
 
@@ -265,8 +270,10 @@ select i {
     }
 
     #foot h2 {
-        font-size: 60%;
+        font-size: 50%;
         margin: 0 auto;
+        letter-spacing: 0.1rem;
+        word-spacing: -0.7rem;
     }
 
     #foot {
@@ -280,12 +287,13 @@ select i {
         font-size: 40%;
     }
 
-    .newcard{
+    .newcard {
         height: 100vh;
     }
+
     #foot h2 {
         font-size: 60%;
-    padding-top: 0.4rem;
+        padding-top: 0.4rem;
         margin: 0 auto;
     }
 
